syntax= "proto3";

message OutputAccount{
    string key_1=1;
    string branch_no=2;
    string curr_status=3;
    string acct_type=4;
    string int_cat=5;
    string inv_type=6;
    string currency=7;
    string customer_no=8;
    int32 cr_limit=9;
    double curr_bal=10;
    int32 wdl_flag=11;
    int32 int_available=12;
    int64 acc_open_dt=13;
    int64 int_frm_dt=14;
    int64 int_to_dt=15;
    int32 no_dues=16;
    int32 var_int_rate=17;
    string rval_ind=18;
    string od_visa_area=19;
    int64 lst_ovr_limit_date=20;
    int32 cr_store_rate=21;
    int32 dr_store_rate=22;
    string gl_class_code=23;
    string mop_type=24;
    int32 instl_due_day=25;
    string term_int_comp_freq=26;
    int64 term_int_cmp_sop_dt=27;
    int64 term_int_cmp_eop_dt=28;
    double term_int_comp_amt=29;
    string lending_status=30;
    string name=31;
    string cust_acct_no=32;
    string prim_acct=33;
    string segment_code=34;
    string industry_code=35;
    string grup_code=36;
    string bus_sector_code=37;
    string tier_cust_type=38;
    string a1=39;
    string a2=40;
    string a3=41;
    string a4=42;
    int64 a5=43;
    int64 a6=44;
    double a7=45;
    double a8=46;
    int64 a9=47;
    int64 a10=48;
    string gl_code=49;
    string int_rate=50;
    double curr_bal_lcy=51;
    int64 as_on_date=52;
}